fixed the layout problem in mobile device

--- a/resume/index.css
+++ b/resume/index.css
@@ -5,7 +5,7 @@ h1, h2, h3, nav, footer {
 }
 body {
    font-family: "Lucida Sans", Verdana, Arial, sans-serif;
-   font-size: 80%;
+   font-size: 1.5vw;
 }
 
 
@@ -37,7 +37,7 @@ div#searchBox {
    margin-top: 1em;
 }
 div#listBox {
-   margin-top: 1em;
+   /*margin-top: 1em;*/
    background-color: #FAFCFF;
    }
 
@@ -45,7 +45,7 @@ table {
    border: collapse;
    border-spacing: 0;
 
-   width: 80%;
+   width: 100%;
 
 }
 
@@ -55,6 +55,7 @@ table tbody td{
    vertical-align: middle;
    padding: 0.5em 0.75em;
 }
+
 table thead th {
    text-align: left;
    padding: 0.25em 0.75em;
